--- a/index.html
+++ b/index.html
@@ -3,8 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Title 1</title>
+    <link rel="stylesheet" href="assets/css/libraries/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <h1>Hola</h1>
+    <div class="container">
+      <!-- Slider main container -->
+      <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">Slide 1</div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+          ...
+        </div>
+        <!-- If we need navigation buttons -->
+        <!--
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+        -->
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js" charset="utf-8"></script>
+    <script src="assets/js/app.js" charset="utf-8"></script>
   </body>
 </html>
