--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide">Slide 1</div>
-          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">
+            <img src="assets/images/8788.png" alt="primera imagen">
+          </div>
+          <div class="swiper-slide">
+            <a href="https://www.google.com.pe" target="_blank">
+              <img src="assets/images/2.jpg" alt="segunda imagen">
+            </a>
+          </div>
           <div class="swiper-slide">Slide 3</div>
           ...
         </div>
         <!-- If we need navigation buttons -->
-        <!--
+
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
-        -->
+
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js" charset="utf-8"></script>
